# files-to-prompt

./: .gitignore  README.md  VERIFY-PDM.md  pyproject.toml
files_to_prompt/: cli.py
