[project]
name = "files-to-prompt"
version = "0.2.1"
description = "Concatenate a directory full of files into a single prompt for use with LLMs"
authors = [{name = "Simon Willison"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "click>=8.0.0",
    "tiktoken>=0.3.0",
    "jsmin>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/simonw/files-to-prompt"
Changelog = "https://github.com/simonw/files-to-prompt/releases"
Issues = "https://github.com/simonw/files-to-prompt/issues"
CI = "https://github.com/simonw/files-to-prompt/actions"

[project.scripts]
files-to-prompt = "files_to_prompt.cli:cli"

[project.optional-dependencies]
test = ["pytest>=6.0.0"]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=6.0.0",
]

[tool.pdm.build]
includes = ["files_to_prompt"]